syntax = "proto3";

option csharp_namespace = "ShopDev.Inventory.API.Protos";

package product;
// The greeting service definition.
service ProductProto {
  // Sends a greeting
  rpc FindById (ProductRequest) returns (ProductResponse);
}

// The request message containing the user's name.
message ProductRequest {
  int32 id = 1;
  int32 spuId = 2;
  int32 quantity = 3;
}

// The response message containing the greetings.
message ProductResponse {
    int32 id = 1;
    string name = 2;
    string description = 3;
    string title = 4;
    string thumbUri = 5;
    double price = 6;
    int32 shopId = 7;
    repeated CategoryTypeDetail categories = 8;
    repeated AttributeDetail attributes = 9;
    repeated VariationDetail variations = 10;
    repeated SpuDetail spus = 11;
}

message CategoryTypeDetail {
    int32 categoryId = 1;
    string name = 2;
}

message AttributeDetail {
    string name = 1;
    repeated string value = 2;
}

message VariationDetail {
    string name = 1;
    repeated string options = 2;
}

message SpuDetail {
    int32 id = 1;
    repeated int32 index = 2;
    double price = 3;
    int32 stock = 4;
}